fix exhib page spacing for mobile

--- a/styles.css
+++ b/styles.css
@@ -797,7 +797,7 @@ nav .nav-wrapper ul li ul li a:hover {
         padding-right: 25px;
         padding-top: 20px;
         /* HEIGHT CHANGE WHEN ADD TEXT BACK IN */
-        height: 200px;
+        height: 160px;
     }
 
     .exhib-words {
